--- a/ruby/skel/test.erb
+++ b/ruby/skel/test.erb
@@ -2,7 +2,7 @@ require 'minitest/autorun'
 require_relative '<%= @file_data.file_name %>'
 
 # Tests for <%= @file_data.year %> day <%= @file_data.day %>
-class Test<%= @file_data.file_name %> < Minitest::Test
+class Test<%= @file_data.year %>_<%= @file_data.day %> < Minitest::Test
   def setup
     @solver = Solver.new
   end
