--- a/ruby/skel/src.erb
+++ b/ruby/skel/src.erb
@@ -2,16 +2,12 @@
 
 # This program answers Advent of Code <%= @file_data.year %> day <%= @file_data.day %>
 #
-# This version ran in
-#
 # Author::    Andre Onuki
 # License::   GPL3
 class Solver
-  def solve
+  def solve(input)
   end
-end
 
-class Solver2
-  def solve
+  def solve2(input)
   end
 end
