Ruby skel - removing line break from input lines

--- a/ruby/skel/test.erb
+++ b/ruby/skel/test.erb
@@ -5,28 +5,28 @@ require_relative '<%= @file_data.file_name %>'
 class Test<%= @file_data.year %>_<%= @file_data.day %> < Minitest::Test
   def test_part1_small
     file_name = File.join(File.dirname(__FILE__), './input.small')
-    input = File.open(file_name).readlines
+    input = File.open(file_name).readlines(&:strip)
     solver = Solver.new
     assert_equal(1, solver.solve(input))
   end
 
   #def test_part1_large
   #  file_name = File.join(File.dirname(__FILE__), './input')
-  #  input = File.open(file_name).readlines
+  #  input = File.open(file_name).readlines(&:strip)
   #  solver = Solver.new
   #  assert_equal(1, solver.solve(input))
   #end
 
   #def test_part2_small
   #  file_name = File.join(File.dirname(__FILE__), './input.small')
-  #  input = File.open(file_name).readlines
+  #  input = File.open(file_name).readlines(&:strip)
   #  solver = Solver.new
   #  assert_equal(1, solver.solve2(input))
   #end
 
   #def test_part2_large
   #  file_name = File.join(File.dirname(__FILE__), './input')
-  #  input = File.open(file_name).readlines
+  #  input = File.open(file_name).readlines(&:strip)
   #  solver = Solver.new
   #  assert_equal(1, solver.solve2(input))
   #end
